--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,6 +13,10 @@
   }
 }
 
+.my-h1 {
+  @apply text-xl md:text-4xl font-bold text-gray-800;
+}
+
 body {
   font-family: var(--font-merriweather), sans-serif;
 }
