--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,6 +8,7 @@
     margin: 0 auto;
     padding: 0px 40px;
   }
+
   .h1 {
     font-size: 2.25rem;
   }
@@ -19,6 +20,10 @@
 
 body {
   font-family: var(--font-merriweather), sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .font-playfair {
@@ -54,6 +59,7 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
+
   .dark {
     --background: 20 14.3% 4.1%;
     --foreground: 60 9.1% 97.8%;
@@ -86,6 +92,7 @@ body {
   * {
     @apply border-border;
   }
+
   body {
     @apply bg-background text-foreground;
   }
